--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+        <marquee direction="right">This Website was created by Gabriel-Codina inc.</marquee>
         <!--music-->
         <audio src="2-03 Candy Shop.mp3" controls>	
 	<embed 
