--- a/public_html/technologies.html
+++ b/public_html/technologies.html
@@ -123,6 +123,7 @@
                 
                 
                 </div>      
+        <marquee direction="right">This Website was created by Gabriel-Codina inc.</marquee>
      <!--music-->
     <audio src="50 Cent - Pilot [128].mp3" controls>	
 	<embed 
